# coursework_3

./: .gitignore  config.py  database.ini.example  main.py  pyproject.toml
src/: base_class.py  create_db.py  db_manager.py  employer.py  user_interface.py  utils.py  vacancy.py  vacancy_search.py
